--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gufo-exif = "0.3.0"
-gufo-jpeg = "0.3.0"
+little_exif = "0.6.16"
+flate2 = "1.0"
+quick-xml = "0.28"
